Fix alignment of h1 in hero mobile version

--- a/src/styles/components/Hero.css
+++ b/src/styles/components/Hero.css
@@ -136,8 +136,9 @@
   }
 
   .hero .frame {
-    width: 95%;
+    width: 100%;
     height: 60%;
+    padding: var(--space-small);
     background-color: var(--color-white-pale);
   }
 
